[gd_scene load_steps=3 format=2]

[ext_resource path="res://art/presents/big_presents.png" type="Texture" id=1]
[ext_resource path="res://src/Presents/present.gd" type="Script" id=2]

[node name="BigPresent" type="RigidBody2D" groups=["presents"]]
collision_layer = 2
collision_mask = 0
input_pickable = true
gravity_scale = 5.0
script = ExtResource( 2 )
present_size = 2

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 12
vframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -22, 28, -22, 0, -26, 0, -26, -12, 26, -12, 26, -6, 26, 0, 22, 0, 22, 28 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
